Update final report

--- a/doc/finalreport/appendices.tex
+++ b/doc/finalreport/appendices.tex
@@ -14,7 +14,7 @@
 	Both of these issues a quick fixes, but are unable to be implemented in time for the dissertation hand-in.
 	They will be fixed in a future version.
 
-	\begin{sidewaystable}[h]
+	\begin{sidewaystable}[H]
 				
 		\begin{tabularx}{\textwidth}{l|XXXX|r}
 			ID &
@@ -32,7 +32,7 @@
 			\hline
 			D4	&	Admin Dashboard login refuses incorrect password	&	Enter correct username and incorrect password	&	Login fails	&	Login Fails	&	\OK \\
 			\hline
-			D5	&	Create Survey button starts the creation of survey wizard	&	Click `Create Survey' button	&	Taken to screen asking for titles, description and CSV data	&	Taken to screen asking for titles, description and CSV data	&	\OK \\
+			D5	&	Create Survey button starts the creation of survey wizard	&	Click `Create Survey' button	&	Taken to screen asking for titles, description, and CSV data	&	Taken to screen asking for titles, description, and CSV data	&	\OK \\
 			\hline
 			D6	&	Survey must have a title	&	Enter no title and press `create' button	&	Message pops up disallowing action	&	Message pops up disallowing action	&	\OK \\
 			\hline
