--- a/doc/finalreport/bibliography.bib
+++ b/doc/finalreport/bibliography.bib
@@ -1,3 +1,10 @@
+@misc{phpmailer,
+	author = {},
+	title = {PHPMailer GitHub Repository},
+	url = {https://github.com/PHPMailer/PHPMailer},
+	note = {(\url{https://github.com/PHPMailer/PHPMailer}) Accessed: 2015-04-12}
+}
+
 @misc{php-mvc-tutorial,
 	author = {Anant Garg},
 	title = {Write your own PHP MVC Framework},
