--- a/doc/finalreport/introduction.tex
+++ b/doc/finalreport/introduction.tex
@@ -57,7 +57,7 @@
 	By collecting both Quantitive and Qualitative data, \ac{AWESOME} can run advanced analytics can be run on the data gathered.
 	The questionnaires sent out are also fully responsive, working on phones to tablets, and to desktop computers by utilising Bootstrap\footnotetext{Bootstrap Homepage: \url{http://getbootstrap.com}} and can be completed at any time by the student.
 	
-	\begin{table}[h]
+	\begin{table}[H]
 		
 		\vspace{1em}
 		
