--- a/doc/finalreport/requirements.tex
+++ b/doc/finalreport/requirements.tex
@@ -11,7 +11,7 @@
 		\item \textbf{No need to type in registration details} - Import of module registration data via \ac{ASTRA} \ac{CSV} export.
 		\item \textbf{Targeted follow-up reminder emails} - Only send reminder emails to respondents who have yet to complete their questionnaire.
 		\item \textbf{Anonymous responses} - Ability to know which particular student has, or has not completed the questionnaire, but not who has said what.
-		\item \textbf{Visually appealing analytics} - Reports available to staff on a by-module, by-department and by-scheme basis, with graphs and textual responses laid out nicely.
+		\item \textbf{Visually appealing analytics} - Reports available to staff on a by-module, by-department, and by-scheme basis, with graphs and textual responses laid out nicely.
 	\end{itemize}
 
 	\section{Development Practices}
@@ -25,7 +25,7 @@
 	The user roles in \ac{AWESOME} are quite simple, there is only an admin and a respondent and each one can only do a few tasks.
 	
 	\begin{itemize}
-		\item \textbf{Admin} - The person who creates the surveys, adds questions and sends them. They can also view results and see who has not yet completed the questionnaire.
+		\item \textbf{Admin} - The person who creates the surveys, adds questions, and sends them. They can also view results and see who has not yet completed the questionnaire.
 		\item \textbf{Respondent} - The recipient of a questionnaire email who fills it in and submits answers. They can also submit feedback about \ac{AWESOME} if debug mode is enabled.
 	\end{itemize}
 	
@@ -33,7 +33,7 @@
 	
 	\subsubsection{Admin User Role}
 	
-	\begin{figure}[h]
+	\begin{figure}[H]
 		\includegraphics[width=\textwidth]{use_case-admin}
 		\caption{Admin use-case diagram.}
 		\label{fig:use_case-admin}
@@ -46,7 +46,7 @@
 	
 	\subsubsection{Respondent User Role}
 	
-	\begin{figure}[h]
+	\begin{figure}[H]
 		\label{fig:use_case-student}
 		\includegraphics[width=\textwidth]{use_case-respondent}
 		\caption{Respondent use-case diagram.}
