Update final report

--- a/doc/finalreport/acronyms-list.tex
+++ b/doc/finalreport/acronyms-list.tex
@@ -2,12 +2,13 @@
 \acro{AU}{Aberystwyth University}
 \acro{AWESOME}{The Aberystwyth Web Evaluation Of Module Experiences}
 \acro{CI}{Continous Integration}
+\acro{CSV}{Comma-Separated Values}
 \acro{i18n}{Internationalisation}
 \acro{MEQ}{Module Evaluation Questionnaires}
 \acro{MVC}{Model-view-controller}
 \acro{OOP}{Object-oriented programming}
-\acro{SME}{Student Module Evaluation}
-\acro{CSV}{Comma-Separated Values}
 \acro{PDO}{PHP Data Objects}
-\acro{SQL}{Structured Query Language}
 \acro{RDBMS}{Relational Database Management System}
+\acro{SME}{Student Module Evaluation}
+\acro{SQL}{Structured Query Language}
+\acro{SSCC}{Staff Student Consultative Committees}
