--- a/doc/finalreport/acronyms.tex
+++ b/doc/finalreport/acronyms.tex
@@ -4,6 +4,6 @@
 % To alphabetise list, use
 % sort -fo acronyms-list.tex acronyms-list.tex
 
-\begin{acronym}
+\begin{acronym}[XXXXXXXX]
 	\input{acronyms-list.tex}
 \end{acronym}
