--- a/doc/finalreport/appendices.tex
+++ b/doc/finalreport/appendices.tex
@@ -1,5 +1,9 @@
 \begin{appendices}
 
+	\chapter{Outline Project Specification}
+	\includepdf[pages=-,scale=.8,pagecommand={}]{../outlinespec/beb12_OutlineProjectSpecification.pdf}
+
+
 	\chapter{Test Tables}
 	\label{app:testtables}
 	
@@ -14,8 +18,8 @@
 	Both of these issues a quick fixes, but are unable to be implemented in time for the dissertation hand-in.
 	They will be fixed in a future version.
 
-	\begin{sidewaystable}[H]
-				
+	\begin{sidewaystable}
+		
 		\begin{tabularx}{\textwidth}{l|XXXX|r}
 			ID &
 			Requirement &
