--- a/doc/finalreport/implementation.tex
+++ b/doc/finalreport/implementation.tex
@@ -1,5 +1,17 @@
 \chapter{Implementation}
+
+	\section{Prerequisites}
+	\label{sec:prerequisites}
 	
-	\section{Implementation}
-	\label{sec:implementation}
+	\section{Security Audit}
+	\label{sec:securityaudit}
+	
+	\section{\acl{MVC} Framework}
+	\label{sec:mvcframework}
+	
+	\section{\acl{i18n} Framework}
+	\label{sec:i18nframework}
+	
+	\section{Deploying to an \ac{AU} server}
+	\label{sec:auserver}
 	
