--- a/doc/finalreport/introduction.tex
+++ b/doc/finalreport/introduction.tex
@@ -86,7 +86,7 @@
 	\section{Objectives}
 	\label{sec:projectobjectives}
 	
-	The overall objective of the project is to implement \ac{AWESOME} on the Aberystwyth University network and collect module feedback for the Computer Science department.
+	The overall objective of the project is to implement \ac{AWESOME} on the Aberystwyth University network and collect module evaluation feedback for the Computer Science department in both short mid-term, pre-\ac{SSCC} questionnaires and comprehensive end-of-semester questionnaires.
 	
 	This can be broken down into four main aims:
 	
